[package]
name = "asset-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
simplicity = { git = "https://github.com/uncomputable/rust-simplicity", branch = "cost", features = ["serde"] }
elements-miniscript = { git = "https://github.com/uncomputable/elements-miniscript", branch = "cost", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
